fix(favycon): fix background image, colors, and alignments

--- a/components/base-layout/index.module.scss
+++ b/components/base-layout/index.module.scss
@@ -3,14 +3,3 @@
 .root {
 	padding: 0;
 }
-
-.container {
-	max-width: 1440px;
-	padding: 20px;
-}
-
-.header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
